# haskell_wasm_counter

./: .gitignore  README.md  build.sh  cabal.project  cabal.project.freeze  counter.cabal  final-4239ngx6.wasm  final-7mmwyy2e.wasm  final-c77n5rst.wasm  final-p6srq42g.wasm  final-vdbfnwes.wasm  final-vpkjh6yx.wasm  final-xbns3z3f.wasm  final-yq6ahh11.wasm  flake.nix  ghc_wasm.ts  index-06ech11c.js  index-2x63rgd5.js  index-4s0rqdq1.js  index-ef4r79ex.js  index-j3fdvayg.js  index-j6v4ndcr.js  index-s3hea8px.js  index-wagwbann.js  index-x7nzc9g3.css  index.html  init.sh  package.json  watch.sh
.github/workflows/: deploy.yaml
src/: Main.hs  Putus.hs
src/Putus/: JSFFI.hs
