cabal-version:   3.0
name:            counter
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

common wasm-reactor
    ghc-options: -no-hs-main -optl-Wl,--export=setup -optl-mexec-model=reactor

executable counter
    import:           warnings, wasm-reactor
    main-is:          Main.hs
    build-depends:    base
                    -- , ghc-experimental
                    -- , bytestring
                    -- , mtl
                    -- , unliftio-core
                    , putus
    hs-source-dirs:   src
    default-language: GHC2021
